--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-                <section data-background="images/rh-images/rh-bg-start.jpg" data-background-size="cover" data-background-position="center bottom">
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="center bottom">
                     <div style="width: 1056px; height: 450px; color: white">
                         <h2 style="color: white">Rule the World</h2>
                         <h3 style="color: white">AppDev in the Cloud</h3>
