Added bg image for index.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <aside class="notes">Welcome to the workshop!</aside>
                 </section>
 
-                <section data-background="images/rh-images/rh-bg-start.jpg" data-background-size="cover" data-background-position="center bottom">
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="center bottom">
                     <div style="width: 1056px; height: 180px; color: white">
                         <h2 style="color: white">What's in a Workshop</h2>
                     </div>
