--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Destinasia Travel Agency Workshop</title>
+		<title>AppDev in the Cloud Workshop</title>
 
 		<meta name="description" content="Online AppDev in the Cloud Workshops.">
 		<meta name="author" content="Eric D. Schabell">
