Added initial walk thourgh workshop.

--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
                     </div>
                     <div style="width: 1056px; height: 300px; color: white;">
                         <ol>
-                            <li>Introduction to rules, events & processes</li>
-                            <li>Starter kits</li>
-                            <li>JBoss BRMS workshops</li>
-                            <li>JBoss BPM Suite workshops</li>
+                            <li>Introduction to Destinasia workshop</li>
+                            <li>Destinasia Travel Agency</li>
                         </ol>
                     </div>
                 </section>
@@ -76,74 +74,36 @@
                         <h1>Part I</h1>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
-                        <h2>JBoss BPM Suite & BRMS</h2>
+                        <h2>Destinasia Workshop Introduction</h2>
                     </div>
                     <div style="width: 1056px; height: 300px;">
-                        <h3><a href="introduction.html" target="_blank" style="color: red">Get started with rules, events, & process overview presentation.</a></h3>
+                        <h3><a href="introduction.html" target="_blank" style="color: red">Get started with Destinasia workshop overview presentation.</a></h3>
                     </div>
                 </section>
+
 
                 <section>
                     <div style="width: 1056px; height: 200px; color: white">
                         <h1>Part II</h1>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
-                        <h2>Starter Kits</h2>
-                    </div>
-                    <div style="width: 1056px; height: 300px;">
-                        <ul>
-                            <li><a href="http://www.schabell.org/p/jboss-bpm-suite-starter-kit.html" target="_blank" style="color: red">JBoss BPM Suite starter kit</a></li>
-                            <li><a href="http://www.schabell.org/p/jboss-brms-starter-kit.html" target="_blank" style="color: red">JBoss BRMS starter kit</a></li>
-                        </ul>
-                    </div>
-                </section>
-
-                <section>
-                    <div style="width: 1056px; height: 200px; color: white">
-                        <h1>Part III</h1>
-                    </div>
-                    <div style="width: 1056px; height: 150px; color: white">
-                        <h2>JBoss BRMS Workshop</h2>
+                        <h2>Destinasia Travel Agency</h2>
                     </div>
                     <div style="width: 1056px; height: 200px; color: white">
                         <h5>
-                            This workshop will teach you how to build an online web shop by designing various
-                            rules, events and a ruleflow. The results will be your very own JBoss BRMS Cool Store.
+                            This workshop will get you hands on with installing the OpenShift Container Platform
+                            and then deploy 6 containerized services to handle Destinasia Travel Agency booking process.
                             <br><br>
-                            The following workshop are available for you to build:
+                            The following workshops are available for you to build:
                         </h5>
                     </div>
                     <div style="width: 1056px; height: 100px;">
                         <ul>
-                            <li><i><a href="brms6_1/lab01.html" target="_blank" style="color: red">JBoss Cool Store with JBoss BRMS 6.1 & JAVA 7 or 8</a></i></li>
-                            <li><i><a href="lab01.html" target="_blank" style="color: red">JBoss Cool Store with JBoss BRMS 6.0.3 & JAVA 7</a></i></li>
+                            <li><i><a href="lab01.html" target="_blank" style="color: red">OpenShift Container Plaform, JBoss BRMS, xPaaS, PHP, .NET and more...</a></i></li>
                         </ul>
                     </div>
                 </section>
 
-                <section>
-                    <div style="width: 1056px; height: 200px; color: white">
-                        <h1>Part IV</h1>
-                    </div>
-                    <div style="width: 1056px; height: 130px; color: white">
-                        <h2>JBoss BPM Suite Workshop</h2>
-                    </div>
-                    <div style="width: 1056px; height: 220px;">
-                        <h5>
-                            This workshop will teach you how to build a business process for a company that wants
-                            to automate its human resource (HR) employee awards program. The results will be your
-                            very own JBoss BPM Suite Rewards Process.
-                            <br><br>
-                            The following workshop are available for you to build:
-                        </h5>
-                    </div>
-                    <div style="width: 1056px; height: 100px;">
-                        <ul>
-                            <li><i><a href="travelagency-bpmworkshop/index.html" style="color: red" target="_blank">JBoss BPM Travel Agency with JBoss BPM Suite 6.1 & JAVA 7 or 8</a></i></li>
-                            <li><i><a href="lab11.html" target="_blank" style="color: red">JBoss BPM HR Employee Rewards with JBoss BPM Suite 6.0.3 & Java 7</a></i></li>
-                        </ul>
-                    </div>
-                </section>
             </div>
 		</div>
 
