--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div style="width: 1056px; height: 450px; color: white">
                         <h2 style="color: white">Rule the World</h2>
                         <h3 style="color: white">AppDev in the Cloud</h3>
-                        <h4 style="color: white">a Red Hat Cloud Suite workshop</h3>
+                        <h4 style="color: white">Workshop</h3>
                     </div>
                     <div style="width: 600px; height: 300px; text-align: left; color: white">
                         Eric D. Schabell<br/>
@@ -63,7 +63,7 @@
                     </div>
                     <div style="width: 1056px; height: 300px; color: white;">
                         <ol>
-                            <li>Introduction to Destinasia workshop</li>
+                            <li>Introduction to workshop</li>
                             <li>Destinasia Travel Agency</li>
                         </ol>
                     </div>
