Adjusted text for slide intro.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <h2>Destinasia Workshop Introduction</h2>
                     </div>
                     <div style="width: 1056px; height: 300px;">
-                        <h3><a href="introduction.html" target="_blank" style="color: red">Get started with Destinasia workshop overview presentation.</a></h3>
+                        <h3><a href="introduction.html" target="_blank" style="color: red">Get started with workshop overview presentation.</a></h3>
                     </div>
                 </section>
 
