Adjusted text for slide intro.

--- a/introduction.html
+++ b/introduction.html
@@ -45,10 +45,11 @@
         <section data-background="images/rh-images/rh-bg-start.png">
             <div style="width: 1056px; height: 250px; color: white">
                 <h2 style="color: white;">Red Hat Cloud Suite</h2>
-                <h2 style="color: white;">Destinasia Workshop Introduction</h2>
+                <h2 style="color: white;">Destinasia Workshop</h2>
+                <h3 style="color: white;">Introduction</h3>
             </div>
             <div style="width: 1056px; height: 200px; color: white">
-                <h3 style="color: white;">Get started with application development in the Cloud, an overview</h3>
+                <h3 style="color: white;">Get started with AppDev in the Cloud, an overview</h3>
             </div>
             <div style="width: 600px; height: 400px; text-align: left; color: white">
                 Eric D. Schabell<br/>
