--- a/introduction.html
+++ b/introduction.html
@@ -63,222 +63,73 @@
             </aside>
         </section>
 
-        <section data-background="images/introduction/image01.png" data-background-position="top">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image4.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image5.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image6.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image7.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image8.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image9.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image10.png">
-        </section>
-
-        <section data-background="images/jteimages/image11.png" data-background-position="top">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image12.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image13.png">
-        </section>
-
-        <section data-background="images/jteimages/image14.png" data-background-position="top">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image15.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image16.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image17.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image18.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image19.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image43.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image45.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image46.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image47.png">
-        </section>
-
-        <section data-background="images/jteimages/image20.png" data-background-position="top">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image21.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image22.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image23.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image24.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image25.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image26.png">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image28.png">
-        </section>
-
-        <section data-background="images/jteimages/image29.png" data-background-position="top">
-        </section>
-
-        <section data-background-color="white">
-            <img width="100%" height="100%" src="images/jteimages/image30.png">
-        </section>
-
-        <section data-background-color="white">
-            <div style="width: 1056px; height: 100px; color: white">
-                <h3>JBoss BRMS - Components</h3>
+        <section data-background="images/rh-images/rh-bg-light.png">
+            <div style="width: 100%; height: 120px; color: white">
+                <h2 style="color: white;">WORKSHOP GOALS</h2>
             </div>
-            <img src="images/brms_bpms_workshop/brms-arch.png">
-        </section>
-
-        <section data-background-color="white">
-            <div style="width: 1056px; height: 100px; color: white">
-                <h3>JBoss BRMS - Architecture</h3>
+            <div style="width: 100%; height: 80px; text-align: left; color: white">
+                Give insights into DevOps as used in a travel industry story:<br/>
             </div>
-            <img width="100%" height="100%" src="images/jteimages/image34.png">
-        </section>
-
-        <section data-background-color="white">
-            <div style="width: 1056px; height: 80px; color: white">
-                <h3>JBoss BPM Suite - Components</h3>
-            </div>
-            <img src="images/brms_bpms_workshop/bpmsuite-arch.png" width="60%">
-        </section>
-
-        <section data-background-color="white">
-            <div style="width: 1056px; height: 100px; color: white">
-                <h3>JBoss BPM Suite - Architecture</h3>
-            </div>
-            <img width="100%" height="100%" src="images/jteimages/image37.png">
-        </section>
-
-        <section data-background-color="lightblue">
-            <div style="width: 1056px; height: 180px">
-                <h2>Customer Case</h2>
-                <h4>Electronic payment provider</h4>
-            </div>
-            <div style="width: 1056px; height: 600px">
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
                 <ul>
-                <li>
-                    <b>Problems</b> - outdated systems, legacy apps difficult to update, duplication of critical data
-                </li>
-                <li><b>Goals</b> - reduce turnaround for changes, improve visibility KPIs</li>
-                <li><b>Solution</b></li>
+                    <li>Install OpenShift Container Platform (OCP)</li>
+                    <li>Build and deploy container with Destinasia Travel Rules</li>
+                    <li>Experience the power of Ansible, automate deployments:</li>
                     <ul>
-                        <li><b>Saved resources</b> - reduction manual processes, increase productivity, 360° visibility to management</li>
-                        <li>Single procurement processes provides <b>better oversight</b> on spending by the org</li>
-                        <li><b>Focus</b> core business activities vs repetitive manual work</li>
-                        <li><b>Quicker</b> on-boarding of merchants, new business capabilities come to market quickly</li>
+                        <li>xPaaS Decision Service with Destinasia Travel Rules</li>
+                        <li>Hotel booking service (PHP)</li>
+                        <li>Car booking service (.Net)</li>
+                        <li>xPaaS Flight service (JEE)</li>
+                        <li>xPaaS Integration service</li>
                     </ul>
                 </ul>
-        </section>
-
-        <section data-background-color="lightblue">
-            <div style="width: 1056px; height: 180px">
-                <h2>Customer Case</h2>
-                <h4>Financial</h4>
             </div>
-            <div style="width: 1056px; height: 600px">
-                <ul>
-                    <li>
-                        <b>Context</b>
-                        <ul>
-                            <li>Need to update email-based processes for executing trades</li>
-                            <li>Needed insights into trade execution and historical trends.</li>
-                            <li>Complex systems involved in trades, status often unclear.</li>
-                            <li>Gaps in the audit capabilities make accountability difficult.</li>
-                        </ul>
-                    </li>
-                    <li><b>Solution</b></li>
-                    <ul>
-                        <li>built standardized processes & rules for various trade phases.</li>
-                        <li>Achieved transparency in management of trades.</li>
-                        <li>Achieved faster decision making during trades.</li>
-                        <li>IT Architecture now actively promotes JBoss BPM Suite as a preferred platform
-                            for lines of business looking to embark on BPM projects.
-                        </li>
-                    </ul>
-                </ul>
-        </section>
-
-
-        <section  data-background-color="lightblue">
-            <div style="width: 1056px; height: 180px">
-                <h2>Customer Case</h2>
-                <h4>Mobile Network Operator</h4>
+            <div style="width: 1056px; height: 20px; text-align: left; color: white">
+                Availabel on <a href="http://github.com/rhcs-destinasia-rules-demo" style="color: red" target="_blank"><b>Red Hat Demo Central</b></a> for you to take home!
             </div>
-            <div style="width: 1056px; height: 600px">
-                <ul>
-                    <li><b>Context</b></li>
-                    <ul>
-                        <li>Business Rule Engine used to implement complex billing rules when generating customer invoices</li>
-                    </ul>
-                    <li><b>Solution</b></li>
-                    <ul>
-                        <li>Sometimes the rules would determine that an unusual discount should be applied, and such discounts <b>required manual approval</b></li>
-                        <li>In fact the rule evaluation was simply a step in a much larger <b>business process</b> - motivation to adopt BPM solution</li>
-                    </ul>
-
-                </ul>
         </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png">
+            <div style="width: 100%; height: 120px; color: white">
+                <h2 style="color: white;">WORKSHOP CLOUD</h2>
+            </div>
+            <img width="100%" height="100%" src="images/introduction/image01.png">
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png">
+            <div style="width: 100%; height: 90px; color: white">
+                <h2 style="color: white;">ARCHITECTURE</h2>
+            </div>
+            <div style="width: 100%; height: 630px; color: white">
+                <img width="100%" height="100%" src="images/introduction/image02.png">
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png">
+            <div style="width: 100%; height: 120px; color: white">
+                <h2 style="color: white;">PREREQUISITES</h2>
+            </div>
+            <div style="width: 100%; height: 80px; text-align: left; color: white">
+                The following requirements should be downloaded:<br/>
+            </div>
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
+                <ul>
+                    <li>Docker for Mac / Linux (v1.13)</li>
+                    <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>OpenShift CLI (oc-v1.5.0-alpha)</b></a></li>
+                    <li>Latest VirtualBox (Mac only)</li>
+                    <li>Ansible playbook</li>
+                    <ul>
+                        <li><a href="http://docs.ansible.com/ansible/intro_installation.html#installing-the-control-machine" style="color: red" target="_blank"><b>Install instructions for Linux</b></a></li>
+                        <li><a href="http://docs.ansible.com/ansible/intro_installation.html#latest-releases-via-pip" style="color: red" target="_blank"><b>Install instructions for Mac</b></a></li>
+                    </ul>
+                    <li><a href="http://github.com/redhatdemocentral/ocp-install-demo" style="color: red" target="_blank"><b>OpenShift Container Platform Install Demo</b></a></li>
+                    <li><a href="http://github.com/redhatdemocentral/rhcs-destinasia-rules-demo" style="color: red" target="_blank"><b>Destinasia Travel Rules Demo</b></a></li>
+                </ul>
+            </div>
+        </section>
+
+
+
 
         <section data-background="images/jteimages/image42.png" data-background-position="top">
             <div style="width: 1056px; height: 450px;" align="right">
@@ -293,9 +144,9 @@
             </div>
         </section>
 
-        <section>
-            <h2>Let's get started...</h2>
-            <h4><a href="index.html#/3" style="color: red" target="_blank">JBoss BRMS & BPM Suite Workshops</a></h4>
+        <section data-background="images/rh-images/rh-bg-light.png">
+            <h2 style="color: white">Let's get started...</h2>
+            <h4><a href="index.html#/3" style="color: red" target="_blank">Destinasia Travel Agency Workshop</a></h4>
         </section>
     </div>
 </div>
