--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="center bottom">
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
                     <div style="width: 1056px; height: 450px; color: white">
                         <h2 style="color: white">Rule the World</h2>
                         <h3 style="color: white">AppDev in the Cloud</h3>
@@ -57,7 +57,7 @@
                     <aside class="notes">Welcome to the workshop!</aside>
                 </section>
 
-                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="center bottom">
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
                     <div style="width: 1056px; height: 180px; color: white">
                         <h2 style="color: white">What's in a Workshop</h2>
                     </div>
@@ -69,37 +69,35 @@
                     </div>
                 </section>
 
-                <section>
-                    <div style="width: 1056px; height: 200px; color: white">
-                        <h1>Part I</h1>
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
+                    <div style="width: 100%; height: 200px; color: white">
+                        <h1 style="color: white">Part I</h1>
                     </div>
-                    <div style="width: 1056px; height: 150px; color: white">
-                        <h2>Destinasia Workshop Introduction</h2>
+                    <div style="width: 100%; height: 150px; color: white">
+                        <h2 style="color: white">Destinasia Workshop Introduction</h2>
                     </div>
-                    <div style="width: 1056px; height: 300px;">
+                    <div style="width: 100%; height: 300px;">
                         <h3><a href="introduction.html" target="_blank" style="color: red">Get started with workshop overview presentation.</a></h3>
                     </div>
                 </section>
 
 
-                <section>
-                    <div style="width: 1056px; height: 200px; color: white">
-                        <h1>Part II</h1>
+                <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
+                    <div style="width: 100%; height: 150px; color: white">
+                        <h1 style="color: white">Part II</h1>
                     </div>
                     <div style="width: 1056px; height: 150px; color: white">
-                        <h2>Destinasia Travel Agency</h2>
+                        <h2 style="color: white">Destinasia Travel Agency</h2>
                     </div>
-                    <div style="width: 1056px; height: 200px; color: white">
-                        <h5>
+                    <div style="width: 100%; height: 220px; color: white">
                             This workshop will get you hands on with installing the OpenShift Container Platform
                             and then deploy 6 containerized services to handle Destinasia Travel Agency booking process.
                             <br><br>
                             The following workshops are available for you to build:
-                        </h5>
                     </div>
-                    <div style="width: 1056px; height: 100px;">
-                        <ul>
-                            <li><i><a href="lab01.html" target="_blank" style="color: red">OpenShift Container Plaform, JBoss BRMS, xPaaS, PHP, .NET and more...</a></i></li>
+                    <div style="width: 100%; height: 100px;">
+                        <ul style="color: white">
+                            <li><i><a href="lab01.html" target="_blank" style="color: red">Destinasia Travel Rules Demo - Containers, BRMS, xPaaS, PHP, .NET and JEE</a></i></li>
                         </ul>
                     </div>
                 </section>
