--- a/introduction.html
+++ b/introduction.html
@@ -42,7 +42,7 @@
 
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
-        <section data-background="images/rh-images/rh-bg-start.png">
+        <section data-background="images/rh-images/rh-bg-start.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 1056px; height: 250px; color: white">
                 <h2 style="color: white;">Red Hat Cloud Suite</h2>
                 <h2 style="color: white;">Destinasia Introduction</h2>
@@ -63,7 +63,7 @@
             </aside>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png">
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 100%; height: 120px; color: white">
                 <h2 style="color: white;">WORKSHOP GOALS</h2>
             </div>
@@ -89,7 +89,7 @@
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png">
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 100%; height: 120px; color: white">
                 <h2 style="color: white;">WORKSHOP CLOUD</h2>
             </div>
@@ -105,7 +105,7 @@
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png">
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 100%; height: 120px; color: white">
                 <h2 style="color: white;">PREREQUISITES</h2>
             </div>
@@ -128,25 +128,70 @@
             </div>
         </section>
 
-
-
-
-        <section data-background="images/jteimages/image42.png" data-background-position="top">
-            <div style="width: 1056px; height: 450px;" align="right">
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 100%; height: 180px; color: white">
+                <h2 style="color: white;">INSTALLATION</h2>
+                <h4 style="color: white">OPENSHIFT CONTAINER PLATFORM IN MINUTES</h4>
             </div>
-            <div style="width: 1156px; height: 100px;" align="right">
-                <div style="width: 500px; height: 100px;" align="left">
-                    Eric D. Schabell<br>
-                    JBoss Technology Evangelist<br>
-                    <a href="http://twitter.com/ericschabell" target="_blank">@ericschabell</a><br>
-                    <a href="http://schabell.org" target="_blank">http://schabell.org</a>
-                </div>
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
+                <ul>
+                    <li>TODO...</li>
+                </ul>
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png">
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 100%; height: 180px; color: white">
+                <h2 style="color: white;">INSTALLATION</h2>
+                <h4 style="color: white">DESTINASIA TRAVEL RULES DEMO</h4>
+            </div>
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
+                <ul>
+                    <li>TODO...</li>
+                </ul>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 100%; height: 180px; color: white">
+                <h2 style="color: white;">ANSIBLE AUTOMATION</h2>
+                <h4 style="color: white">DEPLOYMENTS WITH PLAYBOOKS</h4>
+            </div>
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
+                <ul>
+                    <li>TODO...</li>
+                </ul>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 100%; height: 180px; color: white">
+                <h2 style="color: white;">TESTING SERVICES</h2>
+                <h4 style="color: white">REST CLIENT USES INTEGRATION ENDPOINT</h4>
+            </div>
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
+                <ul>
+                    <li>TODO...</li>
+                </ul>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 100%; height: 180px; color: white">
+                <h2 style="color: white;">WHAT'S NEXT...</h2>
+                <h4 style="color: white">RED HAT DEMO CENTRAL COLLECTION</h4>
+            </div>
+            <div style="width: 100%; height: 380px; text-align: left; color: white">
+                <ul>
+                    <li>TODO...</li>
+                </ul>
+            </div>
+        </section>
+
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <h2 style="color: white">Let's get started...</h2>
-            <h4><a href="index.html#/3" style="color: red" target="_blank">Destinasia Travel Agency Workshop</a></h4>
+            <h3><a href="index.html#/3" style="color: red" target="_blank">Destinasia Travel Agency Workshop</a></h3>
         </section>
     </div>
 </div>
