--- a/introduction.html
+++ b/introduction.html
@@ -191,7 +191,8 @@
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <h2 style="color: white">Let's get started...</h2>
-            <h3><a href="index.html#/3" style="color: red" target="_blank">Destinasia Travel Agency Workshop</a></h3>
+            <!-- <h3><a href="index.html#/3" style="color: red" target="_blank">Destinasia Travel Agency Workshop</a></h3> -->
+            <h3 style="color: white">Destinasia Travel Agency Workshop</h3>
         </section>
     </div>
 </div>
